# AFKOps

./: .gitignore  README.md  pyproject.toml
apps/: capture_tft_screen.py  crop_tft_template.py  evaluate_tft_templates.py  tft_app.py
assets/tft/game_assets/: manifest.json
assets/tft/teamfight_tactics_ui/: board_1600x1000.toml
configs/: tft.example.toml  tft_strategy.example.toml  tft_yolo_classes.txt  tft_yolo_dataset.yaml
data/tft/yolo/labels/: train.cache  val.cache
runs/detect/runs_tft/tft_fast_yolo_24cls/: args.yaml  results.csv
src/afkops/: __init__.py  cli.py
src/afkops/bots/: __init__.py
src/afkops/bots/hearthstone/: __init__.py  bot.py
src/afkops/bots/slay_the_spire/: __init__.py  bot.py
src/afkops/bots/tft/: __init__.py  actions.py  assets.py  board.py  bot.py  client_launcher.py  gameplay.py  matchmaking.py  memory.py  progression_monitor.py  requeue.py  round_admin.py  session.py  shop.py  states.py  strategy.py  strategy_config.py  yolo_vision.py
src/afkops/bots/twitch_viewer/: __init__.py  bot.py
src/afkops/core/: __init__.py  config.py  input.py  object_detection.py  safety.py  screen.py  template_cropper.py  vision.py
tests/: test_debug_overlay.py  test_safety.py  test_screen_capture.py  test_template_cropper.py  test_tft_asset_downloader.py  test_tft_board.py  test_tft_bot.py  test_tft_client_launcher.py  test_tft_matchmaking.py  test_tft_round_admin.py  test_tft_session.py  test_tft_shop.py  test_tft_states.py  test_tft_strategy.py
tools/: download_tft_set_assets.py  extract_video_frames.py  train_tft_yolo.py
(+31 files in other folders)
