[project]
name = "afkops"
version = "0.1.0"
description = "Computer-vision bot framework for game and stream automation experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.26",
    "pillow>=10.0",
    "pydantic>=2.0",
    "pyautogui>=0.9",
    "mss>=9.0",
    "typer>=0.12",
]

[project.optional-dependencies]
detect = [
    "ultralytics>=8.0",
]
browser = [
    "playwright>=1.44",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
afkops = "afkops.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
